# GhostLink

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  project-charter.md  roadmap.md  threat-model.md
docs/adr/: 0001-cryptographic-primitives.md
docs/architecture/: identity-model.md
docs/specifications/: device-certificate.md
src/ghostlink/: __init__.py  crypto.py  device.py  device_certificate.py  entity.py  identity.py  message.py  node.py
tests/: test_crypto.py  test_device.py  test_device_certificate.py  test_entity_device.py  test_identity.py  test_message.py  test_node.py
