[tool.poetry]
name = "ghostlink"
version = "0.1.0"
description = "Experimental open-source secure messaging platform"
authors = ["GhostLink contributors"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "ghostlink", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pynacl = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=ghostlink --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.coverage.run]
branch = true
source = ["ghostlink"]
